--- a/.settings/org.eclipse.php.core.prefs
+++ b/.settings/org.eclipse.php.core.prefs
@@ -1,5 +1,5 @@
-#Thu Sep 08 14:04:14 IDT 2011
+#Wed Oct 26 13:23:42 IST 2011
 eclipse.preferences.version=1
-include_path=5;com.zend.php.phpunit.CONTAINER\u00055;org.zend.php.framework.CONTAINER\u00050;/hellowworld
+include_path=5;com.zend.php.phpunit.CONTAINER\u00055;org.zend.php.framework.CONTAINER\u00050;/git1
 phpVersion=php5.3
 use_asp_tags_as_php=false
